<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="opciones_secretaria">
        <item>Inicio</item>
        <item>Biblioteca</item>
        <item>Prestamos</item>
        <item>Usuarios</item>
        <item>Cerrar Sesion</item>
    </string-array>
    <string-array name="opciones_usuario">
        <item>Inicio</item>
        <item>Prestamos</item>
        <item>Entregas</item>
        <item>Otros</item>
        <item>Cerrar Sesion</item>
    </string-array>
    <string-array name="opciones_crud">
        <item>Agregar</item>
        <item>Eliminar</item>
        <item>Actualizar</item>
        <item>Consultar</item>
    </string-array>
    <string-array name="opciones_bibloteca">
        <item>Areas de aplicacion</item>
        <item>Documentos</item>
        <item>Editoriales</item>
        <item>Autores</item>
        <item>Paises</item>
    </string-array>
    <string-array name="opciones_prestamos_secretaria">
        <item>Aprobar Prestamos</item>
        <item>Consultar Prestamos</item>
        <item>Recibir Documentos</item>
    </string-array>
    <string-array name="opciones_usuarios_secretaria">
        <item>Agregar Usuario</item>
    </string-array>
    <string-array name="opciones_prestamos_usuario">
        <item>Prestar Documentos</item>
        <item>Historial de Prestamos</item>
    </string-array>
    <string-array name="opciones_entregas_usuario">
        <item>Historial de Entregas</item>
    </string-array>
    <string-array name="opciones_otras_usuario">
        <item>Tomar foto de documento</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Biblioteca EISI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="textViewInicioSesionUser">Usuario:</string>
    <string name="textViewInicioSesionContrasena">Contrasena:</string>
    <string name="buttonBase">Generar Base</string>
    <string name="buttonInicioSesionIniciar">Iniciar Sesion Secretaria</string>
    <string name="buttonInicioSesionIniciarU">Iniciar Sesion Usuario</string>
    <string name="buttonMenuBibliotecaAreas">Areas de aplicacion</string>
    <string name="buttonMenuBibliotecaDocumentos">Documentos</string>
    <string name="buttonMenuBibliotecaEditoriales">Editoriales</string>
    <string name="buttonMenuBibliotecaAutores">Autores</string>
    <string name="buttonMenuBibliotecaPaises">Paises</string>
    <string name="title_activity_menu_secretaria">Menu Secretaria</string>
    <string name="title_activity_menu_biblioteca">Biblioteca</string>
    <string name="title_activity_aprobar_prestamo">Aprobar Prestamos</string>
    <string name="title_activity_consultar_prestamos">Consultar Prestamos</string>
    <string name="title_activity_agregar_usuario">Agregar Usuario</string>
    <string name="title_activity_agregar_area">Agregar Area</string>
    <string name="title_activity_eliminar_area">Eliminar Area</string>
    <string name="title_activity_actualizar_area">Actualizar Area</string>
    <string name="title_activity_agregar_documento">Agregar Documento</string>
    <string name="title_activity_actualizar_documento">Actualizar Documento</string>
    <string name="title_activity_eliminar_documento">Eliminar Documento</string>
    <string name="title_activity_agregar_editorial">Agregar Editorial</string>
    <string name="title_activity_eliminar_editorial">Eliminar Editorial</string>
    <string name="title_activity_actualizar_editorial">Actualizar Editorial</string>
    <string name="title_activity_consultar_editorial">Consultar Editorial</string>
    <string name="title_activity_agregar_autor">Agregar Autor</string>
    <string name="title_activity_eliminar_autor">Eliminar Autor</string>
    <string name="title_activity_actualizar_autor">Actualizar Autor</string>
    <string name="title_activity_consultar_autor">Consultar Autor</string>
    <string name="title_activity_agregar_pais">Agregar Pais</string>
    <string name="title_activity_eliminar_pais">Eliminar Pais</string>
    <string name="title_activity_actualizar_pais">Actualizar Pais</string>
    <string name="title_activity_consultar_pais">Consultar Pais</string>
    <string name="title_activity_consultar_area">Consultar Area</string>
    <string name="title_activity_consultar_documento">Consultar Documento</string>
    <string name="title_activity_prestar_documento">Prestar Documentos</string>
    <string name="title_activity_historial_prestamo">Historial de Prestamos</string>
    <string name="title_activity_entregar_documento">Recibir Documento</string>
    <string name="title_activity_historial_entrega">Historial de Entregas</string>
    <string name="title_activity_menu_usuario">Menu Usuario</string>
    <string name="nombreEditorial">Nombre Editorial</string>
    <string name="agregarEditorial">Agregar Editorial</string>
    <string name="limpiarEditorial">Limpiar campos</string>
    <string name="idEditorial">id Editorial</string>
    <string name="actualizarEditorial">Actualizar Editorial</string>
    <string name="btnEliminarEditorial">Eliminar Editorial</string>
    <string name="texViewPrueba"></string>
    <string name="buscar">Buscar</string>
    <string name="checkbox">CheckBox</string>
    <string name="title1">Inicio de Sesion al Sistema</string>
    <string name="txtUser">Usuario: </string>
    <string name="txtPass">Contraseña:</string>
    <string name="promtUser">Usuario</string>
    <string name="promtPass">Contraseña</string>
    <string name="btnIniciar">Iniciar Sesion</string>
    <string name="saludoSecre">Bienvenida Secretaria</string>
    <string name="saludoAlum">Bienvenido Alumno</string>
    <string name="btnSalirAlum">Salir</string>
    <string name="btnSalirSecre">Salir X</string>
    <string name="large_text">Bienvenido a Biblioteca EISI</string>
    <string name="large_text2"></string>
    <string name="txvId">ID Documento:</string>
    <string name="btnConsultarDocu">Consultar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="txtEditorial">Id de Editorial</string>
    <string name="txtTipoDoc">Tipo de Documento</string>
    <string name="txtTema">Tema</string>
    <string name="txtDescripcion">Descripcion:</string>
    <string name="txtAnio">Año:</string>
    <string name="txtNum">Numero de Pag.:</string>
    <string name="txtCantidad">Cantidad de Libros:</string>
    <string name="txtEdicion">Edicion:</string>
    <string name="btnInsertarDocumento">Agregar Documento</string>
    <string name="btnActExtraer">Extraer</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="titleDocEliminar">Eliminar Documento</string>
    <string name="titleDocActualizar">Actualuzar Documento</string>
    <string name="titleDocConsultar">Consultar Documento</string>
    <string name="titleDocAgregar">Agregar Documento</string>
    <string name="Idautor">IdAutor</string>
    <string name="nombreautor">Nombre:</string>
    <string name="apellidoautor">Apellido:</string>
    <string name="codigopais">CodigoPais:</string>
    <string name="opciones">Opciones:</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="Consultar">Consultar</string>
    <string name="listViewConsultaPrestamo"></string>
    <string name="Iddoc">ID_Documento</string>
    <string name="editDoc"></string>
    <string name="usuario">ID_Usuario</string>
    <string name="editusuario"></string>
    <string name="entregar">Entregar Documento</string>
    <string name="Codigopais">Codigo Pais</string>
    <string name="editCodigopais"></string>
    <string name="nombrepais">Nombre Pais</string>
    <string name="textArea1">AGREGAR AREA</string>
    <string name="textArea2">Id Area</string>
    <string name="textArea3">Nombre</string>
    <string name="textArea4">Descripcion</string>
    <string name="buttonArea1">Agregar</string>
    <string name="buttonArea2">Limpiar</string>
    <string name="textAreaAct">ACTUALIZAR AREA</string>
    <string name="buttonAreaAct">Actualizar</string>
    <string name="textAreaConsul">CONSULTAR AREA</string>
    <string name="textAreaConsul1">Resultado:</string>
    <string name="buttonAreaConsul">Consultar</string>
    <string name="textAreaEli1">Id Area:</string>
    <string name="buttonAreaEli">Eliminar</string>
    <string name="textPrestamoConsul">Numero Prestamo:</string>
    <string name="textPrestamoResul">Resultados:</string>
    <string name="buttonPrestamoConsul">Consultar</string>
    <string name="buttonPrestamoConsul1">Limpiar</string>
    <string name="textPrestamoResul1">Fecha de Prestamo:</string>
    <string name="textPrestamoResul2">Fecha de Entrega:</string>
    <string name="textPrestamoResul3">Libros Prestado:</string>
    <string name="textPrestamoResul4">Estado:</string>
    <string name="buttonAprobarPrest">Aprobar</string>
    <string name="textAprobar1">Id Secretaria:</string>
    <string name="textAprobar2">Id Usuario:</string>
    <string name="txtViewPaises">Pais</string>
    <string name="textViewNoResultados"></string>
    <string name="textViewDetalleDocumento"></string>
    <string name="agregarDocumentoPrestamo">Agregar Documento a Prestamo</string>
    <string name="terminarPrestamoDocumento">Terminar prestamo de documento(s)</string>

    <!-- String para USUARIO insert -->
    <string name="userTitleAgregar">Agregar Usuario</string>
    <string name="userTxtIdUsuario">ID Usuario</string>
    <string name="userTxtNombre">Nombre: </string>
    <string name="userTxtApellido">Apellido:</string>
    <string name="userTxtContrasenia">Contraseña:</string>
    <string name="userTxtActivo">Estado:</string>
    <string name="userTxtSi">Activo</string>
    <string name="userTxtNo">Inactivo</string>
    <string name="userTxtTipo">Seleccione Privilegios</string>

    <string-array name="privilegios_array">
        <item>Alumno</item>
        <item>Secretaria</item>
    </string-array>

    <string name="btnAgregarUsuarios">Agregar</string>
    <string name="textViewIdPrestamo">""</string>
    <string name="textview">TextView</string>
    <string name="hostGratuito">Hosting Gratuito</string>
    <string name="title_activity_tomar_foto">TomarFotoActivity</string>
    <string name="strTomaFoto">Tomar Foto</string>
    <string name="imagen1"></string>
    <string name="title_activity_speech_busqueda_documento">SpeechBusquedaDocumentoActivity</string>
    <string name="btnTalk">Hable ahora</string>
    <string name="buscarSpeech">Busqueda por voz</string>
    <string name="title_activity_imprimir_hoja_prestamo">ImprimirHojaPrestamoActivity</string>
    <string name="print_string">Imprimir</string>

</resources>