<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:ignore="ButtonStyle" >

    <TableRow>

        <TextView android:text="@string/Idautor" />

        <EditText
            android:id="@+id/editIdautor"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/nombreautor" />

        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/apellidoautor" />

        <EditText
            android:id="@+id/editApellido"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/codigopais" />

        <EditText
            android:id="@+id/editCodigo"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>


    <TableRow>

        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="insertarAutor"
            android:text="@string/insertar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>
