<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/DetalleDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:layout_marginTop="20dip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:ems="10"
        android:hint="@string/promtUser" >
        <requestFocus />
  
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:ems="10"
        android:hint="@string/promtPass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:onClick="Verificar"
        android:text="@string/btnIniciar" />



    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="inicio"        
        android:text="@string/buttonBase" />

   

</LinearLayout>
