<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/textPrestamoConsul" />

        <EditText
            android:id="@+id/editNumPrestamo"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <Button
        android:onClick="buscar"
        android:text="@string/buscar" />

    <TextView
        android:id="@+id/textViewNoResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewNoResultados" />
    
    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</TableLayout>